[package]
name = "pumpfun"
version = "4.6.0"
edition = "2021"
authors = ["Rapheal Bamidele <nhuxhr@gmail.com>"]
repository = "https://github.com/nhuxhr/pumpfun-rs"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "token-creation", "memecoins", "pumpfun", "sdk"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(skip_expensive_tests)'] }

[features]
default = ["create-ata", "close-ata"]
create-ata = []
close-ata = []
versioned-tx = []
stream = ["dep:base64", "dep:futures"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
borsh = { version = "1.6.0", features = ["derive"] }
futures = { version = "0.3.31", optional = true }
isahc = "1.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
solana-client = "3.1.8"
solana-commitment-config = "3.1.0"
solana-compute-budget-interface = "3.0.0"
solana-sdk = "3.0.0"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
spl-token-2022 = "10.0.0"
tokio = "1.49.0"

[dev-dependencies]
dirs = "6.0.0"
serial_test = "3.3.1"
solana-commitment-config = "3.1.0"
tempfile = "3.24.0"
tokio-test = "0.4.4"
